# Qt6

./: README.md  Untitled Diagram.drawio
Adapter/: CMakeLists.txt  filelogger.cpp  filelogger.h  logadapter.cpp  logadapter.h  main.cpp
AddingImagestoQtQuick/: CMakeLists.txt  main.cpp  main.qml  res.qrc
AddingResources/: CMakeLists.txt  widget.cpp  widget.h
AgeCalc/: CMakeLists.txt  agecalc.cpp  agecalc.h  main.cpp
AnimationQtQuick3d/: CMakeLists.txt  main.cpp  main.qml
AutomaticMemoryManagement/: CMakeLists.txt  main.cpp  test.cpp  test.h
Bridge/: CMakeLists.txt  advancedlogger.cpp  advancedlogger.h  iLogger.h  main.cpp  simplelogger.cpp  simplelogger.h
BrowserToRunJavaScript/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  new.html  res.qrc
Classes/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
CmakeHello/: CMakeLists.txt  main.cpp  widget.h
Composite/: CMakeLists.txt  main.cpp  prototype.cpp  prototype.h  school.cpp  student.cpp
CreateCircleQt6/: CMakeLists.txt  main.cpp  main.qml
Create_Sphere_3d/: CMakeLists.txt  main.cpp  main.qml
DependencyInversion/: CMakeLists.txt  advancedoven.cpp  advancedoven.h  badoven.cpp  badoven.h  basicoven.cpp  basicoven.h  main.cpp
DependencyInversion/Interfaces/: iEvenHeat.h  iOven.h
DisconnectingSignalsAndSlots/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
DonutChart/: CMakeLists.txt  widget.cpp
DoodleDrawerClient/: CMakeLists.txt  main.cpp  main.qml
DoodleDrawerClient/controllers/: websockethandler.cpp  websockethandler.h
DoodleDrawerServer/: CMakeLists.txt  gamemanager.cpp  gamemanager.h  main.cpp  websockethandler.cpp  websockethandler.h
DragAndDrop/: CMakeLists.txt  res.qrc  widget.cpp  widget.ui
DynamicCasting/: CMakeLists.txt  car.cpp  car.h  feline.h  main.cpp  racecar.h
ErrorsException/: CMakeLists.txt  main.cpp
EventHandlingSignalSlots/: CMakeLists.txt  widget.cpp  widget.h
EyeVideoPlay/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  main.cpp
EyesInDlib/: CMakeLists.txt  main.cpp
FirstQtQuick/: main.cpp  main.qml
FirstQtQuickApplication/: CMakeLists.txt  main.cpp  main.qml
GroupofStates/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Inheritance/: CMakeLists.txt  animal.cpp  animal.h  canine.cpp  canine.h  feline.h  main.cpp  mammal.cpp  mammal.h
InterfaceSegregation/: CMakeLists.txt  airplane.cpp  airplane.h  bird.cpp  bird.h  helicopter.cpp  helicopter.h  main.cpp
InterfaceSegregation/Interfaces/: iBad.h  iFlying.h  iMachine.h
Interfaces/: CMakeLists.txt  Freezer.h  Microwave.h  Toaster.h  appliance.cpp  appliance.h  main.cpp
KIS/: CMakeLists.txt  filesystem.cpp  filesystem.h  iFile.h  main.cpp
Laptops/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp
LineChart/: CMakeLists.txt  main.cpp  main.qml  widget.cpp
LiskovSubstitution/: CMakeLists.txt  main.cpp  mysocket.cpp  mysocket.h
MouseMover/: CMakeLists.txt  main.cpp
OpenClosed/: CMakeLists.txt  caffinator3000.cpp  caffinator3000.h  coffeemachine.cpp  coffeemachine.h  main.cpp  shop.cpp  shop.h
OpenClosed/Interfaces/: iBrew.h
OpenCvEyes/: CMakeLists.txt  main.cpp  pictureclub.cpp  pictureclub.h
Overloading/: CMakeLists.txt  feline.cpp  feline.h  lion.cpp  lion.h  main.cpp
PieChart/: CMakeLists.txt  widget.cpp
Ping/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  ping.cpp  ping.h  theping.cpp  theping.h
PlayAudioInQtQuick/: CMakeLists.txt  main.cpp  main.qml  res.qrc
PointerMemoryManagement/: CMakeLists.txt  main.cpp
Ponters/: CMakeLists.txt  main.cpp
QCheckBox/: CMakeLists.txt  res.qrc  widget.cpp  widget.h
QComboBox/: CMakeLists.txt  widget.cpp  widget.h
QDatetime/: CMakeLists.txt  main.cpp
QFinalState/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
QGridLayout/: CMakeLists.txt  widget.cpp
QHBoxLayout/: CMakeLists.txt  widget.cpp
QLCDNumberClass/: CMakeLists.txt  widget.cpp  widget.h
QLabel/: CMakeLists.txt  Resources.qrc  widget.cpp
QList/: CMakeLists.txt  main.cpp
QMakeIcon/: QMakeIcon.pro  widget.cpp
QMap/: CMakeLists.txt  main.cpp  pet.h
QObject/: CMakeLists.txt  main.cpp  test.h
QObjectsCannotBeCopied/: CMakeLists.txt  main.cpp
QProperty/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
QRadioButton/: CMakeLists.txt  res.qrc  widget.cpp  widget.h
QSpinBox/: CMakeLists.txt  widget.cpp  widget.h
QStringList/: main.cpp
QTParentchildRelationship/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  test.cpp  test.h
QVBoxLayout/: CMakeLists.txt  widget.cpp
QVariant/: main.cpp
QWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QbyteArray/: CMakeLists.txt  main.cpp
QfinalStateOriginal/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Qobjects/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
Qstring/: CMakeLists.txt  main.cpp
QtChartsQtQuick/: CMakeLists.txt  main.cpp  main.qml
QtCreatorMouseSecondExample/: CMakeLists.txt  main.cpp  main.qml
QtIntegers/: CMakeLists.txt  main.cpp
QtPushButton/: CMakeLists.txt  widget.cpp
QtQuick3d/: CMakeLists.txt  main.cpp  main.qml
QtQuickDrawTick/: CMakeLists.txt  main.cpp  main.qml
QtQuickDrawingCrossLine/: CMakeLists.txt  main.cpp  main.qml
QtQuickMouseAreaElement/: CMakeLists.txt  main.cpp  main.qml
QtQuickPieChart/: CMakeLists.txt  main.cpp  main.qml
QtQuickVideoPlayer/: CMakeLists.txt  main.cpp  main.qml  res.qrc
QtScatterChart/: CMakeLists.txt  main.cpp  main.qml
RandomGenerator/: CMakeLists.txt  widget.cpp  widget.h
ReinterpretCasting/: CMakeLists.txt  car.h  feline.cpp  feline.h  main.cpp  (+2 more)
RestClient_Get_Post/: CMakeLists.txt  main.cpp  main.qml  restclient.cpp  restclient.h
RestClient_Lecture1/: CMakeLists.txt  main.cpp  main.qml  restclient.cpp  restclient.h
StaticCast/: CMakeLists.txt  car.cpp  car.h  feline.cpp  feline.h  main.cpp  racecar.cpp  racecar.h
TryGeneratingMesh/: CMakeLists.txt  main.cpp
VideoPlayer/: CMakeLists.txt  main.cpp  main.qml  opencvimageprovider.cpp  opencvimageprovider.h  res.qrc  vidoestreamer.cpp  vidoestreamer.h
(+334 files in other folders)
